--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
 		"size": "size-limit",
 		"analyze": "size-limit --why"
 	},
-	"peerDependencies": {},
 	"husky": {
 		"hooks": {
 			"pre-commit": "tsdx lint"
@@ -57,6 +56,8 @@
 		"typescript": "^4.2.3"
 	},
 	"dependencies": {
+		"i18n-iso-countries": "^6.6.0",
+		"joi": "^17.4.0",
 		"jsonwebtoken": "^8.5.1",
 		"qrcode": "^1.4.4"
 	}
