--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"version": "0.1.4",
+	"version": "0.1.5",
 	"license": "MIT",
 	"main": "dist/index.js",
 	"typings": "dist/index.d.ts",
@@ -56,6 +56,7 @@
 		"typescript": "^4.2.3"
 	},
 	"dependencies": {
+		"axios": "^0.21.1",
 		"i18n-iso-countries": "^6.6.0",
 		"joi": "^17.4.0",
 		"jsonwebtoken": "^8.5.1",
