--- a/package.json
+++ b/package.json
@@ -39,23 +39,23 @@
 	"module": "dist/corsign-sdk.esm.js",
 	"size-limit": [
 		{
-			"path": "dist/corsign-sdk.cjs.production.min.js",
+			"path": "dist/corsign-sdk-js.cjs.production.min.js",
 			"limit": "10 KB"
 		},
 		{
-			"path": "dist/corsign-sdk.esm.js",
+			"path": "dist/corsign-sdk-js.esm.js",
 			"limit": "10 KB"
 		}
 	],
 	"devDependencies": {
-		"@size-limit/preset-small-lib": "^6.0.3",
+		"@size-limit/preset-small-lib": "^4.10.2",
 		"@types/crypto-js": "^4.0.1",
 		"@types/jest": "^27.0.2",
 		"@types/jsonwebtoken": "^8.5.1",
 		"@types/qrcode": "^1.4.0",
 		"eslint-plugin-tsdoc": "^0.2.11",
 		"husky": "^6.0.0",
-		"size-limit": "^6.0.3",
+		"size-limit": "^4.10.2",
 		"tsdx": "^0.14.1",
 		"tslib": "^2.1.0",
 		"typescript": "^4.2.3"
